New style and authorizing

--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-P4TOSEA; Database=RecyclingNow; Trusted_Connection=True; MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-P4TOSEA; Database=RecyclingNow; Trusted_Connection=True; MultipleActiveResultSets=true",
+    "IdentityConnection": "Server=DESKTOP-P4TOSEA; Database=RecyclingNowIdentity; Trusted_Connection=True; MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
